# HackWebRTC

./: .gitignore  README.md  webrtc_src_extractor.py
Use-WebRTC-Static-Library/: .gitignore
Use-WebRTC-Static-Library/app/src/main/: AndroidManifest.xml
Use-WebRTC-Static-Library/app/src/main/cpp/: async_rest_client.h
Use-WebRTC-Static-Library/app/src/main/java/com/github/piasy/hack_webrtc/: MainActivity.java
app/: CMakeLists.txt  build.gradle
app/libs/restclient-0.4.4/include/restclient-cpp/: version.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: async_rest_client.cpp  async_rest_client.h  hack_webrtc.cpp  try-webrtc.cpp  try_webrtc.cpp
app/src/main/java/com/github/piasy/hack_webrtc/: AsyncRestClient.java  MainActivity.java
app/src/main/java/com/github/piasy/hack_webrtc/rest_client/: AsyncRestClient.java
app/src/main/java/com/github/piasy/try_webrtc/: AsyncRestClient.java  MainActivity.java
app/src/main/res/layout/: activity_hello_jni.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
